--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,9 +4,11 @@ unique_ids:
     log_in_form.Home.revenue_share: '1698510617027417138837187.6812'
     log_in_form.Home.manage_products.view_product: '1700660552597613360259464.6619'
     log_in_form.Home.lenders.view_profile.update_form: '1701018881370960369691242.599'
+    Log_in_Home.user_issues.user_buganalysis: '1701194495981359877514363.0164'
     log_in_form.Home.manage_cms.edit: '1700208830761148321592340.13086'
     log_in_form.Home.borrowers.view_profile: '1701018073055249519581475.10367'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
+    Log_in_Home.user_issues.user_viewprofile: '1701194529355446895271741.55286'
     log_in_form.Home.loan_management.approved_loans.view_profile: '1700809539524917769017884.2534'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
     log_in_form.Home.manage_reports: '1698510790972444753270153.69006'
@@ -18,14 +20,17 @@ unique_ids:
     log_in_form: GUGLRS4VVV3FBLZUMSK4OE75PW55BHQW
     log_in_form.Home.loan_management.approved_loans: '1700989102210788946947726.7357'
     log_in_form.Home.manage_settings.manage_membership: '1699008921737741791321030.3928'
+    Log_in_Home.user_issues.user_buganalysis.RowTemplate8: '1701194801153324326216988.63275'
     log_in_form.Home.loan_management: '1698510496370567653860910.7308'
     log_in_form.Home.admin_teams.view_profile: '1698854972350390763170561.2675'
     log_in_form.Home.lenders.view_profile.edit_form: '1701018867664386619071483.3697'
     log_in_form.Home.lenders.view_profile: '1701018854801178509338378.06406'
     log_in_form.Home.manage_products.edit_form: '170066057911177918763304.68495'
     log_in_form.Home.performance_tracke: '1698858550617535212188881.0073'
+    Log_in_Home.user_issues.user_bugreport: '1701194512490732812310534.3502'
     log_in_form.Home.manage_cms: '1698510754472259835130229.36667'
     log_in_form.Home.loan_management.rejected_loans: '1699007498216132035280942.19319'
+    Log_in_Home.user_issues.user_viewprofile.RowTemplate7: '1701194587760390681294714.3192'
     log_in_form.Home.admin_teams.view_profile.update_form: '1698899789994986117374399.0231'
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
     log_in_form.Home.manage_products.view_product.view_profile: '1700731939370891877540560.8834'
@@ -53,7 +58,8 @@ unique_ids:
     log_in_form.Home.lenders: '1698510463208765568412581.0891'
     log_in_form.Home.manage_products.update_form: '1700660591317831346418682.1431'
     log_in_form.Home.manage_products.view_product.RowTemplate1: '1700661028456970242389925.746'
-  modules: {}
+  modules:
+    Log_in_Home.user_issues: '1701194478152998462669721.3854'
   server_modules:
     ServerModule1: '1698747873220484267261740.3767'
   assets:
