Created log_in_form.Home.performance_tracker; Edited log_in_form.Home and settings; Deleted log_in_form.Home.performance_tracke

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -9,6 +9,7 @@ unique_ids:
     log_in_form.Home.borrowers.view_profile: '1701018073055249519581475.10367'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
     Log_in_Home.user_issues.user_viewprofile: '1701194529355446895271741.55286'
+    log_in_form.Home.performance_tracker: '1701245155167835986473108.2434'
     log_in_form.Home.loan_management.approved_loans.view_profile: '1700809539524917769017884.2534'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
     log_in_form.Home.manage_reports: '1698510790972444753270153.69006'
@@ -26,7 +27,6 @@ unique_ids:
     log_in_form.Home.lenders.view_profile.edit_form: '1701018867664386619071483.3697'
     log_in_form.Home.lenders.view_profile: '1701018854801178509338378.06406'
     log_in_form.Home.manage_products.edit_form: '170066057911177918763304.68495'
-    log_in_form.Home.performance_tracke: '1698858550617535212188881.0073'
     Log_in_Home.user_issues.user_bugreport: '1701194512490732812310534.3502'
     log_in_form.Home.manage_cms: '1698510754472259835130229.36667'
     log_in_form.Home.loan_management.rejected_loans: '1699007498216132035280942.19319'
