--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -26,22 +26,29 @@ unique_ids:
     log_in_form.Home.manage_cms: '1698510754472259835130229.36667'
     log_in_form.Home.loan_management.rejected_loans: '1699007498216132035280942.19319'
     Log_in_Home.user_issues.user_viewprofile.RowTemplate7: '1701194587760390681294714.3192'
+    log_in_form.Home.borrower.view_profile.update_form: '1701246853845324145000544.76526'
     log_in_form.Home.admin_teams.view_profile.update_form: '1698899789994986117374399.0231'
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
     log_in_form.Home.manage_products.view_product.view_profile: '1700731939370891877540560.8834'
+    log_in_form.Home.borrower.RowTemplate6: '1701246343114435851729685.8797'
+    log_in_form.Home.lender.view_profile.edit_form: '170124851764128040821474.685673'
+    log_in_form.Home.borrower.view_profile: '1701246615392443711658780.3913'
     log_in_form.Home.manage_cms.update: '1700208899567327850489516.46844'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.lender: '1701246184543321220488771.16736'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
     log_in_form.Home.loan_management.rejected_loans.RowTemplate3: '1700990906654891670182752.1731'
+    log_in_form.Home.lender.view_profile: '1701248501905321130366956.43915'
     log_in_form.Home.manage_settings.manage_roi: '1698728518958724320447228.9803'
     log_in_form.Home.loan_management.approved_loans.RowTemplate2: '170098961145885880103428.35272'
+    log_in_form.Home.lender.view_profile.update_form: '1701248533380776436604878.8065'
     log_in_form.Home.manage_settings.manage_fee.fee_edit_form: '1699363428965272828870498.47583'
     log_in_form.Home.borrower: '170124616914517095374714.938494'
     log_in_form.Home.manage_products.manage_products1: '1700660507863931940498620.2151'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
     log_in_form.Home.manage_cms.row: '1700642248315520962979899.10156'
+    log_in_form.Home.borrower.view_profile.edit_form: '1701246842844965371218764.9501'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.manage_products.add_groups: '170080498956345881868175.23132'
     log_in_form.Home.manage_products.add_categories: '1700660565187932854949977.6968'
@@ -50,6 +57,7 @@ unique_ids:
     log_in_form.Home.loan_management.under_process.view_profile_3: '170099174820734113428911.9267'
     log_in_form.Home.manage_products.update_form: '1700660591317831346418682.1431'
     log_in_form.Home.manage_products.view_product.RowTemplate1: '1700661028456970242389925.746'
+    log_in_form.Home.lender.RowTemplate5: '1701248287515482754768662.1108'
   modules:
     Log_in_Home.user_issues: '1701194478152998462669721.3854'
   server_modules:
