--- a/client_code/log_in_form/Home/borrower/form_template.yaml
+++ b/client_code/log_in_form/Home/borrower/form_template.yaml
@@ -1,7 +1,7 @@
 container: {type: ColumnPanel}
 components:
 - type: ColumnPanel
-  properties: {}
+  properties: {col_widths: '{}'}
   name: content_panel
   layout_properties:
     col_widths: {}
@@ -35,14 +35,14 @@ components:
     properties:
       role: null
       columns:
-      - {id: RSMZQS, title: customer id, data_key: column_1, $$hashKey: 'object:2075'}
-      - {id: ZNJCAZ, title: full name, data_key: column_2, $$hashKey: 'object:2076'}
-      - {id: AMTTBE, title: email, data_key: column_3, $$hashKey: 'object:2077'}
-      - {id: ZFAQSV, title: last confirm, data_key: column_4, $$hashKey: 'object:2127'}
-      - {id: ITSHDG, title: user type, data_key: column_5, $$hashKey: 'object:2129'}
-      - {id: MKJUDU, title: date of birth, data_key: column_6, $$hashKey: 'object:2131'}
-      - {id: LNLBNV, title: mobile number, data_key: column_7, $$hashKey: 'object:2133'}
-      - {id: RQAQUE, title: regitsrtion approve, data_key: column_8, $$hashKey: 'object:2135'}
+      - {id: RSMZQS, title: Customer Id, data_key: column_1, $$hashKey: 'object:2075'}
+      - {id: ZNJCAZ, title: Full Name, data_key: column_2, $$hashKey: 'object:2076'}
+      - {id: AMTTBE, title: Email, data_key: column_3, $$hashKey: 'object:2077'}
+      - {id: ZFAQSV, title: Last Confirm, data_key: column_4, $$hashKey: 'object:2127'}
+      - {id: ITSHDG, title: User Type, data_key: column_5, $$hashKey: 'object:2129'}
+      - {id: MKJUDU, title: Date Of Birth, data_key: column_6, $$hashKey: 'object:2131'}
+      - {id: LNLBNV, title: Mobile Number, data_key: column_7, $$hashKey: 'object:2133'}
+      - {id: RQAQUE, title: Registration Approve, data_key: column_8, $$hashKey: 'object:2135'}
       auto_header: true
       tooltip: ''
       border: ''
@@ -60,7 +60,7 @@ components:
       grid_position: HDRNJO,EXEIVK
     components:
     - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: admin.dashboard.borrowers.RowTemplate3}
+      properties: {spacing_above: none, spacing_below: none, item_template: log_in_form.Home.borrower.RowTemplate6}
       name: repeating_panel_1
-      layout_properties: {}
+      layout_properties: {grid_position: 'HDRNJO,BSNVWB'}
 is_package: true
