--- a/client_code/log_in_form/Home/loan_management/form_template.yaml
+++ b/client_code/log_in_form/Home/loan_management/form_template.yaml
@@ -80,9 +80,33 @@ components:
     layout_properties: {grid_position: 'THEKGJ,YDIVPE'}
     event_bindings: {click: button_5_click}
   - type: Button
+    properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: 'Loan Disbursed              ', font_size: null,
+      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '#0876E8', bold: false, underline: false, icon: ''}
+    name: button_6
+    layout_properties: {grid_position: 'THEKGJ,UBBBRD'}
+    event_bindings: {click: button_6_click}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: 'Lapsed Loans       ', font_size: null,
+      font: '', spacing_above: medium, icon_align: left, spacing_below: small, italic: false,
+      background: '#0876E8', bold: false, underline: false, icon: ''}
+    name: button_7
+    layout_properties: {grid_position: 'YSIPNY,SIXGCT'}
+    event_bindings: {click: button_7_click}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: 'defaulter loans    ', font_size: null,
+      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '#0876E8', bold: false, underline: false, icon: ''}
+    name: button_8
+    layout_properties: {grid_position: 'YSIPNY,VXAFWJ'}
+    event_bindings: {click: button_8_click}
+  - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
-    name: button_6
-    layout_properties: {grid_position: 'THEKGJ,UBBBRD'}
+    name: button_9
+    layout_properties: {grid_position: 'YSIPNY,RUWJTJ'}
