--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,7 +3,7 @@ dependencies: []
 services:
 - source: /runtime/services/tables.yml
   client_config: {}
-  server_config: {}
+  server_config: {auto_create_missing_columns: false}
 startup: {type: form, module: log_in_form.Home}
 package_name: Admin_app
 allow_embedding: false
